Updating to allow for local runs of the app and the tests - nightwatch isn't working now, needs updating

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ example_automation_scripts/robotframework/output.xml
 example_automation_scripts/robotframework/report.html
 example_automation_scripts/robotframework/selenium-screenshot-\d+.png,
 example_automation_scripts/robotframework/selenium-screenshot-1.png
+example_automation_scripts/_selenium_server/selenium-server-standalone-3.7.1.jar
